docs: Add Javadoc documentation for all classes in input and model packages
- Added class and method documentation following industry best practices
- Ensured all public methods have clear descriptions of their purpose and parameters
- Introduced missing exceptions where necessary for robustness